--- a/plugin.yml
+++ b/plugin.yml
@@ -4,7 +4,7 @@ api: [3.0.0-ALPHA1, 3.0.0-ALPHA2]
 description: A continuation of the supposedly stopped mcpeMMO
 author: wsngamerz
 
-main: mcmmo-PE\mcmmo-PE
+main: src\wsngamerz\mcmmo-PE\mcmmo-PE
 load: STARTUP
 
 commands:
