--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
  - pecl install channel://pecl.php.net/pthreads-3.1.6
  - pecl install channel://pecl.php.net/weakref-0.3.2
  - echo | pecl install channel://pecl.php.net/yaml-2.0.0
- - git clone --recursive --branch=mcpe-1.0 https://github.com/pmmp/PocketMine-MP.git
+ - git clone --recursive https://github.com/pmmp/PocketMine-MP.git
  - mkdir -p PocketMine-MP/plugins/mcmmo-PE
  - cp -rf wsngamerz/McMMO-PE-plugin/src PocketMine-MP/plugins/mcmmo-PE
  - cp -rf wsngamerz/McMMO-PE-plugin/resources PocketMine-MP/plugins/mcmmo-PE
