--- a/plugin.yml
+++ b/plugin.yml
@@ -4,7 +4,7 @@ api: [3.0.0-ALPHA3, 3.0.0-ALPHA2]
 description: A continuation of the supposedly stopped mcpeMMO
 author: wsngamerz
 
-main: wsngamerz/mcmmoPE/mcmmoPE
+main: mcmmoPE/mcmmoPE
 load: STARTUP
 
 commands:
